# ai-engineer

restaurant-bot-agent/: customer-support-memory.db  input_guardrails.py  main.py  models.py  output_guardrails.py  pyproject.toml  tools.py
restaurant-bot-agent/my_agent/: complaints_agent.py  menu_agent.py  order_agent.py  reservation_agent.py  triage_agent.py
story-book-maker/: main.py  pyproject.toml
story-book-maker/.adk/artifacts/users/user/sessions/099e0616-def8-49dc-b200-411078ec5732/artifacts/page_1.png/versions/0/: metadata.json
story-book-maker/.adk/artifacts/users/user/sessions/099e0616-def8-49dc-b200-411078ec5732/artifacts/page_2.png/versions/0/: metadata.json
story-book-maker/.adk/artifacts/users/user/sessions/099e0616-def8-49dc-b200-411078ec5732/artifacts/page_3.png/versions/0/: metadata.json
story-book-maker/.adk/artifacts/users/user/sessions/099e0616-def8-49dc-b200-411078ec5732/artifacts/page_4.png/versions/0/: metadata.json
story-book-maker/story_book_maker/: agent.py  callbacks.py
story-book-maker/story_book_maker/.adk/: session.db
story-book-maker/story_book_maker/sub_agents/illustrator/: agent.py  prompt.py  tools.py
story-book-maker/story_book_maker/sub_agents/parallel_agent/: agent.py  prompt.py  tools.py
story-book-maker/story_book_maker/sub_agents/sequential_agent/: agent.py
story-book-maker/story_book_maker/sub_agents/story_writer/: agent.py  prompt.py  tools.py
story-book-maker/story_book_maker/sub_agents/story_writer_agent/: agent.py  prompt.py
(+140 files in other folders)
